[package]
name = "light-and-shadow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kiddo = { version = "0.2", features = ["serialize"] }
kasi-kule = { git = "https://github.com/alisww/kasi-kule.git" }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }



